API endpoint data consumption logic replaced with GET requests